# baidu-search

./: .gitignore  README.md  pyproject.toml  search_mcp.py  test.py
examples/: search_agent.py  wide_search.py
src/baidu_search/: __init__.py  cache.py  compressor.py  core.py  crawl.py  jina_chunker.py
tests/: baidu_search.py  test.py  test_compressor.py
