[project]
name = "baidu-search"
version = "0.1.0"
description = "百度搜索爬虫工具"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "jiaohuix"}
]
dependencies = [
    "httpx[http2]",
    "beautifulsoup4",
    "lxml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/baidu_search"]

