[project]
name = "baidu-search"
version = "0.1.0"
description = "百度搜索爬虫工具"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "jiaohuix"}
]
dependencies = [
    "httpx[http2]",
    "beautifulsoup4",
    "lxml",
    "aiolimiter",
    "requests>=2.32.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/baidu_search"]


[project.optional-dependencies]

pdf = [
    "pdfplumber>=0.11.9"
]

markdown = [
    "readability-lxml>=0.8.4.1",
    "markdownify>=1.2.2"
]

crawl4ai = [
    "playwright",
    "crawl4ai"
]